--- a/MauiM3Agenda1/Views/ListaProduto.xaml
+++ b/MauiM3Agenda1/Views/ListaProduto.xaml
@@ -4,15 +4,46 @@
              x:Class="MauiM3Agenda1.Views.ListaProduto"
              Title="Minhas Compras">
 
+    <!-- Botões na barra superior -->
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Somar" />
+        <ToolbarItem Text="Somar" Clicked="ToolbarItem_Clicked_1" />
+        <!-- Apenas exibe o botão, sem ação definida -->
         <ToolbarItem Text="Adicionar" Clicked="ToolbarItem_Clicked" />
+        <!-- Chama um método ao clicar -->
     </ContentPage.ToolbarItems>
 
+    <!-- Layout que organiza os elementos na tela -->
     <VerticalStackLayout>
-        <Label 
-             Text="Welcome to .NET MAUI!"
-             VerticalOptions="Center" 
-             HorizontalOptions="Center" />
+        <SearchBar x:Name="txt_search" 
+                    Placeholder="Busca de Produtos"
+                    TextChanged="txt_search_TextChanged"/>
+        <ListView x:Name="lst_produtos" ItemSelected="lst_produtos_ItemSelected">
+            <ListView.Header>
+                <Grid ColumnDefinitions="*, *, *, *, *">
+                    <Label Grid.Column="0" Text="ID" />
+                    <Label Grid.Column="1" Text="Descrição" />
+                    <Label Grid.Column="2" Text="Preço" />
+                    <Label Grid.Column="3" Text="Qnt" />
+                    <Label Grid.Column="4" Text="Total" />
+                </Grid>
+            </ListView.Header>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <ViewCell.ContextActions>
+                            <MenuItem Text="Remover" Clicked="MenuItem_Clicked" />
+                        </ViewCell.ContextActions>
+                        <Grid ColumnDefinitions="*, *, *, *, *">
+                            <Label Grid.Column="0" Text="{Binding Id}" />
+                            <Label Grid.Column="1" Text="{Binding Descricao}" />
+                            <Label Grid.Column="2" Text="{Binding Preco}" />
+                            <Label Grid.Column="3" Text="{Binding Quantidade}" />
+                            <Label Grid.Column="4" Text="{Binding Total}" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </VerticalStackLayout>
+
 </ContentPage>
